[package]
name = "nintaudio"
version = "0.1.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>", "Yuliya Shpunarska <yuliya.shpunarska@gmail.com>", "Vincent Moreau"]
edition = "2018"

[dependencies]
clap = { version = "2", features = ["wrap_help"] }
rodio = "0.8"
rust-embed = "4.3.0"
termion = { version = "1", git = "https://gitlab.redox-os.org/Jezza/termion", branch = "windows-support" }
