[package]
name = "nintaudio"
version = "0.1.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>", "Yuliya Shpunarska <yuliya.shpunarska@gmail.com>", "Vincent Moreau <vmoreau1703@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2", features = ["wrap_help"] }
rodio = "0.8"
rust-embed = "4.3.0"
termion = { version = "1", git = "https://gitlab.redox-os.org/Jezza/termion", branch = "windows-support" }
rand = "0.4.0"
gilrs = "0.6"
piston_window = "0.86.0"
piston-ai_behavior = "0.26.0"
piston2d-sprite = "0.48.0"
image = "0.21.0"
uuid = "0.6.5"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"

[features]
piston = []
default = ["piston"]
